modelos de Medicamentos, Lotes y Farmacias en funcionamiento

--- a/gestion_de_farmacias/plantillas/inicio.html
+++ b/gestion_de_farmacias/plantillas/inicio.html
@@ -1,4 +1,4 @@
-<!-- Cabecera del html, incluye la etiqueta <body> -->
+<!-- Contenido estatico de la pagina -->
 {% extends 'base.html' %} 
 
 <!--Titulo de la pagina o pestaña-->
