--- a/gestion_de_farmacias/plantillas/stock.html
+++ b/gestion_de_farmacias/plantillas/stock.html
@@ -3,13 +3,13 @@
 
 <!--Titulo de la pagina o pestaña-->
 {% block title %}
-	Usuario
+	Stock
 {% endblock  %}
 
 
 {% block content %}
 	
-	<h1>Usuario</h1>
+	<h1>Stock</h1>
 	
 	<div>
 		<h3>el usuario es: </h3>
@@ -27,3 +27,5 @@
 	
 {% endblock content %}
 
+
+	
