--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -4,6 +4,9 @@
                         <a class="nav-link" href="/inicio/">Inicio</a>
                 </li>
                 <li class="nav-item">
+                        <a class="nav-link" href="/stock/">Stock</a>
+                </li>
+                <li class="nav-item">
                         <a class="nav-link" href="/recetas/">Recetas</a>
                 </li>
                 <li class="nav-item">
