--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -1,4 +1,4 @@
-<!-- Cabecera del html, incluye la etiqueta <body> -->
+<!-- Contenido estatico de la pagina -->
 {% extends 'base.html' %} 
 
 <!--Titulo de la pagina o pestaña-->
