hice alguna modificaciones en urls.py y en views.py

--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -1,4 +1,55 @@
-<nav>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+
+        <!-- Logo -->
+        <a class="navbar-brand" href="/inicio/">Gestion de farmacias</a>
+
+        <!-- Links -->
+        <ul class="navbar-nav">
+                <li class="nav-item">
+                        <a class="nav-link" href="/inicio/">Inicio</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="/medicamentos/">Medicamentos</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="/stock/">Stock</a>
+                </li>
+                <!-- Stock Dropdown -->
+                <!--<li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                Stock
+                        </a>
+                        <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/stock/">Ver stock</a>
+                                <a class="dropdown-item" href="/crear_stock/">Crear stock</a>
+                                <a class="dropdown-item" href="#">Link 3</a>
+                        </div>
+                </li>-->
+
+
+                <li class="nav-item">
+                        <a class="nav-link" href="/recetas/">Recetas</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="/usuario/">Usuario</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="/login/">Login</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="/admin/">Admin</a>
+                </li>
+    
+        </ul>
+
+        <!--
+        <form class="form-inline" action="#">
+                <input class="form-control mr-sm-2" type="text" placeholder="...">
+                <button class="btn btn-success" type="submit">Buscar</button>
+        </form>
+        -->
+
+<!--
         <ul class="nav justify-content-center">
                 <li class="nav-item">
                         <a class="nav-link" href="/inicio/">Inicio</a>
@@ -22,4 +73,8 @@
                         <a class="nav-link" href="/admin/">Admin</a>
                 </li>
         </ul>
+-->
+
+
+
 </nav>
