añadi la carpeta static y las relaciones al .css y al .js

--- a/gestion_de_farmacias/plantillas/base.html
+++ b/gestion_de_farmacias/plantillas/base.html
@@ -9,7 +9,7 @@
 
         {% load static %}
 
-        <link href="{% static 'login.css' %}" rel="stylesheet">
+        <link type="text/css" href="{% static 'css/login.css' %}" rel="stylesheet"/>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
