cree la funcionalidad de registrar_usuarios y lista_de_usuarios.

--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -15,16 +15,16 @@
                         <a class="nav-link" href="/stock/">Stock</a>
                 </li>
                 <!-- Stock Dropdown -->
-                <!--<li class="nav-item dropdown">
+                <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                                Stock
+                                Usuarios
                         </a>
                         <div class="dropdown-menu">
-                                <a class="dropdown-item" href="/stock/">Ver stock</a>
-                                <a class="dropdown-item" href="/crear_stock/">Crear stock</a>
+                                <a class="dropdown-item" href="/lista_de_usuarios/">Lista de usuarios</a>
+                                <a class="dropdown-item" href="/registrar_usuario/">Registrar Usuario</a>
                                 <a class="dropdown-item" href="#">Link 3</a>
                         </div>
-                </li>-->
+                </li>
 
 
                 <li class="nav-item">
