--- a/gestion_de_farmacias/plantillas/usuario.html
+++ b/gestion_de_farmacias/plantillas/usuario.html
@@ -13,7 +13,8 @@
 	
 	<div>
 		<h3>el usuario es: </h3>
-		<p>{{usuario}}</p>
+		<p>{{request.user}}</p>
+		<p>{{request.usuario.usuario}}</p>
 	</div>
 
 	<div>
