--- a/gestion_de_farmacias/plantillas/registrar_usuario.html
+++ b/gestion_de_farmacias/plantillas/registrar_usuario.html
@@ -22,10 +22,8 @@
 			</div>
 			
 
-			<form method="POST">
+			<form method="POST">{% csrf_token %}
 				<div class="card-body">
-					{% csrf_token %}
-				
 					{{form.as_p}}
 				</div>
 
