--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -85,7 +85,14 @@
 	</div>
 
 
-
+	<script type="text/javascript">
+                // esto corrije el tipo del campo imput 'id_vencimiento' en el formulario para crear recetas
+                // por alguna razon no quiere cambiar el type a date
+                window.onload = function() {
+                        document.getElementById('id_vencimiento').type = 'date';
+                        //document.getElementById('id_fecha_de_nacimiento').type = 'date';
+                }
+        </script>
 	
 {% endblock content %}
 
