--- a/gestion_de_farmacias/plantillas/login.html
+++ b/gestion_de_farmacias/plantillas/login.html
@@ -11,18 +11,21 @@
 	
 	<h1>Login</h1>
 	
-	<div>
-		<h3>el usuario es: </h3>
-		<p>{{usuario}}</p>
-	</div>
+	<div class="container">
+		<form method="POST"> {% csrf_token %}
 
-	<div>
-		<h3>Lista de datos: </h3>
-		<ul>
-			{% for dato in datos_json %}
-			<li>{{dato}}</li>
-			{% endfor %}
-		</ul>
+			<div class="form-group">
+				<label>Nombre de usuario</label>
+				<input type="text" class="form-control" name="username">
+			</div>
+			<div class="form-group">
+				<label>Contraseña</label>
+				<input type="password" class="form-control" name="password">
+			</div>
+
+			<button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Iniciar sesion</button>
+
+		</form>
 	</div>
 	
 {% endblock content %}
