funciones para generar datos 01

--- a/gestion_de_farmacias/plantillas/inicio.html
+++ b/gestion_de_farmacias/plantillas/inicio.html
@@ -54,6 +54,10 @@ user.rol.nombre hace referencia a la propiedad "nombre" de los objetos de la cla
 </div>
 
 	<div>
+		<p>user: {{user}}</p>
+		<p>user.group: {{user.group }}</p>
+		<p>user.is_authenticated: {{user.is_authenticated }}</p>
+		<br>
 		<p>user.rol: {{user.rol }}</p>
 		<p>user.usuario | length: {{user.usuario | length }}</p>
 		<p>user.usuario: {{user.usuario }}</p>
