--- a/gestion_de_farmacias/plantillas/base.html
+++ b/gestion_de_farmacias/plantillas/base.html
@@ -9,7 +9,6 @@
 
         {% load static %}
 
-        <link href="{% static 'css/estilos.css' %}" rel="stylesheet"/>
         
 
 	<meta charset="utf-8">
@@ -23,7 +22,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-
+ <link rel="stylesheet" href="{% static 'estilos.css' %}" />
 
 
 </head>
@@ -56,7 +55,8 @@
 
 
         </script>
-        <script src="{% static 'js/mi_script.js' %}"></script>
+        <script src="{% static 'mi_script.js' %}"></script>
+
 
 </body>
 </html>
