--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -83,6 +83,9 @@
                         </li>
                 {% else %}
                         <li class="nav-item">
+                                <a class="nav-link" href="{% url 'actualizar_mi_usuario' %}">Actualizar mi usuario</a>
+                        </li>
+                        <li class="nav-item">
                                 <a class="nav-link text-white" href="{% url 'logout' %}">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi d-block mx-auto mb-1e" viewBox="0 0 16 16">
                                                 <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
