arregle psrs todos los modrlod, el problema de html al intentar imprimir fechas

--- a/gestion_de_farmacias/plantillas/inicio.html
+++ b/gestion_de_farmacias/plantillas/inicio.html
@@ -11,16 +11,12 @@
 	
 	<h1>Inicio</h1>
 	
-<div class="alert alert-success">
 {% if  user.usuario_activo %}
-
-	<p>el usuario SI es activo</p>
-{% else %}
-	<p>el usuario NOOOO es activo</p>
-{% endif %}
-</div>
-
 <div class="alert alert-success">
+	<p>user.usuario_activo = {{user.usuario_activo}}</p>
+</div>
+{% endif %}
+
 
 <!--
 el user.rol trae un objeto de la clase Roles, 
@@ -28,36 +24,28 @@ por lo tanto hay que hacer la verificacion  -> if user.rol.nombre == "medico"
 user.rol.nombre hace referencia a la propiedad "nombre" de los objetos de la clase Roles
 -->
 {% if user.is_authenticated%}
+	<div class="alert alert-success">
+
+		<p>user.is_authenticated == {{user.is_authenticated}}</p>
 
 	{% if  user.rol == "medico"  %}
 		<p>el user.rol == "medico"</p>
-	{% else %}
-		<p>el user.rol != "medico"</p>
 	{% endif %}
-
 
 	{% if  user.rol == "farmacia"  %}
 		<p>el user.rol == "farmacia"</p>
-	{% else %}
-		<p>el user.rol != "farmacia"</p>
 	{% endif %}
-
 
 	{% if  user.rol == "usuario"  %}
 		<p>el user.rol == "usuario"</p>
-	{% else %}
-		<p>el user.rol != "usuario"</p>
 	{% endif %}
-
 	{% if  user.rol == "stock"  %}
 		<p>el user.rol == "stock"</p>
-	{% else %}
-		<p>el user.rol != "stock"</p>
 	{% endif %}
+	</div>
 
 {% endif %}
 
-</div>
 
 	<div>
 		<p>user.rol: {{user.rol}}</p>
@@ -68,15 +56,12 @@ user.rol.nombre hace referencia a la propiedad "nombre" de los objetos de la cla
 		<p>user.rol: {{user.rol }}</p>
 		<p>user.usuario | length: {{user.usuario | length }}</p>
 		<p>user.usuario: {{user.usuario }}</p>
-		<p>*****user.rol.nombre: {{user.rol.nombre }} *****</p>
-		<p>*****user.rol.nombre: {{user.rol.nombre }} *****</p>
 		<p>user.nombre: {{user.nombre | upper}}</p>
 		<p>user.apellido: {{user.apellido }}</p>
 		<p>user.usuario_activo: {{user.usuario_activo }}</p>
 		<p>request.user.username: {{request.user.username | upper}}</p>
 		<p>request.user.nombre: {{request.user.nombre }}</p>
 		<p>request.user: {{request.user }}</p>
-		<p>request: {{request }}</p>
 	</div>
 
 	
