implemente parte de la vista de MiStock, que muestra solo el stock de lafarmacia a la que pertenece el usuario

--- a/gestion_de_farmacias/plantillas/inicio.html
+++ b/gestion_de_farmacias/plantillas/inicio.html
@@ -55,7 +55,7 @@ user.rol.nombre hace referencia a la propiedad "nombre" de los objetos de la cla
 		<br>
 		<p>user.rol: {{user.rol }}</p>
 		<p>user.usuario | length: {{user.usuario | length }}</p>
-		<p>user.usuario: {{user.usuario }}</p>
+		<p>user.cedula_de_identidad : {{user.cedula_de_identidad }}</p>
 		<p>user.nombre: {{user.nombre | upper}}</p>
 		<p>user.apellido: {{user.apellido }}</p>
 		<p>user.usuario_activo: {{user.usuario_activo }}</p>
