termine la implementacion de la vista mi_stock

--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -39,7 +39,7 @@
 
                 {% if  user.is_authenticated %}
                 <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'mi_stock' %}">MI Stock</a>
+                        <a class="nav-link text-white" href="{% url 'mi_stock' %}">Mi Stock</a>
                 </li>
                 {% endif %}
 
