--- a/gestion_de_farmacias/plantillas/mi_stock.html
+++ b/gestion_de_farmacias/plantillas/mi_stock.html
@@ -12,6 +12,30 @@
 	<h1>Stock de {{mi_farmacia.nombre}}</h1>
 
         <div class="container">
+	
+		{% if formulario_nuevo_stock.errors %}
+			<p style="color:red;">Por favor revisa este campo</p>
+		{% endif %}
+
+		<div class="card">
+			<div class="card-header">
+				<h3>Registrar stock</h3>
+			</div>
+		
+			<form method="POST">{% csrf_token %}
+				<div class="card-body">
+					{{formulario_nuevo_stock.as_p}}
+				</div>
+				<div class="card-footer">
+					<input class="btn btn-primary" type="submit" value="Registrar">
+				</div>
+			</form>
+		</div>
+
+
+	</div>
+
+        <div class="container">
 		
 
                 <table class="table table-hover">
@@ -23,11 +47,11 @@
                                  </tr>
                         </thead>
                         <tbody>
-                                {% for registro in mi_stock %}
+                                {% for lote in lotes_list %}
                                 <tr>
-                                        <td>{{registro.stock}}</td>
-                                        <td>{{registro.medicamento}}</td>
-                                        <td>{{registro.vencimiento}}</td>
+                                        <td>{{lote.stock}}</td>
+                                        <td>{{lote.medicamento}}</td>
+                                        <td>{{lote.vencimiento}}</td>
                                 </tr>
                                 {% endfor %}
                                 
