cambie el inicio a vistas basadas en clases,mando  como contexto la farmacia a la que pertenece el funcionario

--- a/gestion_de_farmacias/plantillas/inicio.html
+++ b/gestion_de_farmacias/plantillas/inicio.html
@@ -27,6 +27,7 @@ user.rol.nombre hace referencia a la propiedad "nombre" de los objetos de la cla
 	<div class="alert alert-success">
 
 		<p>user.is_authenticated == {{user.is_authenticated}}</p>
+		<p>mi farmacia es {{mi_farmacia}}</p>
 
 	{% if  user.rol == "medico"  %}
 		<p>el user.rol == "medico"</p>
