--- a/gestion_de_farmacias/plantillas/medicamentos.html
+++ b/gestion_de_farmacias/plantillas/medicamentos.html
@@ -9,14 +9,10 @@
 
 {% block content %}
 	
-	<h1>Medicamentos</h1>
 	
-	<div>
-		<h3>el usuario es: </h3>
-		<p>{{usuario}}</p>
-	</div>
 
-        <div>
+        <div class="container">
+		<h1>Medicamentos</h1>
 		<!-- ==============================-->
 		<!-- Tabla con los Medicamentos -->
 		<!-- ==============================-->
@@ -31,7 +27,6 @@
 						<th>Principio activo</th>
                                                 <th>Forma</th>
                                                 <!--<th>Contraindicaciones</th>-->
-						<th>...</th>
                                         </tr>
                                 </thead>
                                 
