--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -67,7 +67,7 @@
                                         </svg>
                                         Registrar Usuario
                                         </a>
-                                        <a class="dropdown-item" href="{% url 'actualizar_mi_usuario' %}">
+                                        <a class="dropdown-item" href="{% url 'mi_usuario' %}">
                                                 Actualizar Mi Usuario
                                         </a>
                                         <!--<a class="dropdown-item" href="#">Link 3</a>-->
@@ -105,11 +105,6 @@
                                         <a class="nav-link" href="{% url 'login' %}">Login</a>
                                 </li>
                         {% else %}
-                                <!--
-                                <li class="nav-item">
-                                        <a class="nav-link" href="{% url 'actualizar_mi_usuario' %}">Actualizar mi usuario</a>
-                                </li>
-                                -->
                                 <li class="nav-item">
                                         <a class="nav-link text-white" href="{% url 'logout' %}">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi d-block mx-auto mb-1e" viewBox="0 0 16 16">
