cambie el nav, lo saque del base.html yahora se carga en cada plantilla

--- a/gestion_de_farmacias/plantillas/actualizar_mi_usuario.html
+++ b/gestion_de_farmacias/plantillas/actualizar_mi_usuario.html
@@ -8,9 +8,10 @@
 
 
 {% block content %}
+<!--Nav bar-->
+{% include "nav.html" %}
 
-
-	<div class="">
+	<div class="container">
 	
 		{% if form.errors %}
 			<p style="color:red;">Por favor revisa los campos</p>
