--- a/gestion_de_farmacias/plantillas/lista_de_usuarios.html
+++ b/gestion_de_farmacias/plantillas/lista_de_usuarios.html
@@ -8,7 +8,10 @@
 
 
 {% block content %}
-	
+	<!--Nav bar-->
+{% include "nav.html" %}
+
+<div class="container">
 	<h1>Lista de Usuarios</h1>
 	
 	<div>
@@ -60,7 +63,7 @@
 
 	</div>
 
-
+</div>
 
 
 	
