--- a/gestion_de_farmacias/plantillas/medicamentos.html
+++ b/gestion_de_farmacias/plantillas/medicamentos.html
@@ -9,7 +9,8 @@
 
 {% block content %}
 	
-	
+	<!--Nav bar-->
+        {% include "nav.html" %}
 
         <div class="container">
 		<h1>Medicamentos</h1>
