--- a/gestion_de_farmacias/plantillas/inicio.html
+++ b/gestion_de_farmacias/plantillas/inicio.html
@@ -1,72 +1,53 @@
 <!-- Contenido estatico de la pagina -->
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 <!--Titulo de la pagina o pestaña-->
-{% block title %}
-	Inicio
-{% endblock  %}
+{% block title %} Inicio {% endblock %} {% block content %}
+<!--Nav bar-->
+{% include "nav.html" %}
+
+<div class="container">
+    <h1 class="my-3">Inicio</h1>
+
+    <h4>Prueba de datos que llegan desde el backend</h4>
 
 
-{% block content %}
-	
-	<h1>Inicio</h1>
-	
-<div class="p-3">
-	
-	<h4>Prueba de datos que llegan desde el backend</h4>
-	
-	
+    <!--
 
+	-->
+    {% if user.is_authenticated%} {% if user.usuario_activo %}
+    <p>user.usuario_activo = {{user.usuario_activo}}</p>
+    {% endif %}
 
-<!--
+    <p>user.is_authenticated == {{user.is_authenticated}}</p>
+    <p>mi farmacia es {{mi_farmacia}}</p>
 
--->
-{% if user.is_authenticated%}
+    {% if user.rol == "medico" %}
+    <p>el user.rol == "medico"</p>
+    {% endif %} {% if user.rol == "farmacia" %}
+    <p>el user.rol == "farmacia"</p>
+    {% endif %} {% if user.rol == "usuario" %}
+    <p>el user.rol == "usuario"</p>
+    {% endif %} {% if user.rol == "stock" %}
+    <p>el user.rol == "stock"</p>
+    {% endif %} {% endif %}
 
-	{% if  user.usuario_activo %}
-	<p>user.usuario_activo = {{user.usuario_activo}}</p>
-	{% endif %}
-
-	<p>user.is_authenticated == {{user.is_authenticated}}</p>
-	<p>mi farmacia es {{mi_farmacia}}</p>
-
-	{% if  user.rol == "medico"  %}
-	<p>el user.rol == "medico"</p>
-	{% endif %}
-
-	{% if  user.rol == "farmacia"  %}
-	<p>el user.rol == "farmacia"</p>
-	{% endif %}
-
-	{% if  user.rol == "usuario"  %}
-	<p>el user.rol == "usuario"</p>
-	{% endif %}
-
-	{% if  user.rol == "stock"  %}
-	<p>el user.rol == "stock"</p>
-	{% endif %}
-
-{% endif %}
-
-	<p>user.rol: {{user.rol}}</p>
-	<p>user: {{user}}</p>
-	<p>user.group: {{user.group }}</p>
-	<p>user.is_authenticated: {{user.is_authenticated }}</p>
-	<br>
-	<p>user.rol: {{user.rol }}</p>
-	<p>user.usuario | length: {{user.usuario | length }}</p>
-	<p>user.cedula_de_identidad : {{user.cedula_de_identidad }}</p>
-	<p>user.nombre: {{user.nombre | upper}}</p>
-	<p>user.apellido: {{user.apellido }}</p>
-	<p>user.usuario_activo: {{user.usuario_activo }}</p>
-	<p>request.user.username: {{request.user.username | upper}}</p>
-	<p>request.user.nombre: {{request.user.nombre }}</p>
-	<p>request.user: {{request.user }}</p>
+    <p>user.rol: {{user.rol}}</p>
+    <p>user: {{user}}</p>
+    <p>user.group: {{user.group }}</p>
+    <p>user.is_authenticated: {{user.is_authenticated }}</p>
+    <br>
+    <p>user.rol: {{user.rol }}</p>
+    <p>user.usuario | length: {{user.usuario | length }}</p>
+    <p>user.cedula_de_identidad : {{user.cedula_de_identidad }}</p>
+    <p>user.nombre: {{user.nombre | upper}}</p>
+    <p>user.apellido: {{user.apellido }}</p>
+    <p>user.usuario_activo: {{user.usuario_activo }}</p>
+    <p>request.user.username: {{request.user.username | upper}}</p>
+    <p>request.user.nombre: {{request.user.nombre }}</p>
+    <p>request.user: {{request.user }}</p>
 
 </div>
 
-	
+
 {% endblock content %}
-
-
-	
