--- a/gestion_de_farmacias/plantillas/mi_usuario.html
+++ b/gestion_de_farmacias/plantillas/mi_usuario.html
@@ -8,15 +8,16 @@
 
 
 {% block content %}
-	
+<!--Nav bar-->
+{% include "nav.html" %}
 
-        <div class="">
+        <div class="container">
 	
 		{% if form.errors %}
 			<p style="color:red;">Por favor revisa los campos</p>
 		{% endif %}
 
-		<div class="card">
+		<div class="card my-3">
 			<div class="card-header">
 				<h3>Actulizar mi Usuario</h3>
 			</div>
