--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -8,44 +8,13 @@
 
 
 {% block content %}
+
+<!--Nav bar-->
+{% include "nav.html" %}	
 	
+<div class="container">
 	<h1>Recetas</h1>
-
-	{% if mensaje %}
-                <div>
-                        <h3>el mensaje es: </h3>
-                        <p>{{mensaje}}</p>
-                </div>
-        {% endif %}
 	
-	<div class="">
-	
-		{% if formulario_nueva_receta.errors %}
-			<p style="color:red;">Por favor revisa este campo</p>
-		{% endif %}
-
-		<div class="card">
-			<div class="card-header">
-				<h3>Crear receta</h3>
-			</div>
-			
-			<form method="POST">{% csrf_token %}
-				<div class="card-body">
-					{{formulario_nueva_receta.as_p}}
-				</div>
-
-				<div class="card-footer">
-					<input class="btn btn-primary" type="submit" value="Crear">
-				</div>
-			</form>
-		</div>
-
-	</div>
-
-
-	<hr>
-
-
 	<div>
 		<!-- ==============================-->
 		<!-- Tabla con las recetas -->
@@ -84,6 +53,33 @@
 
 	</div>
 
+	<hr>
+	
+	<div class="">
+	
+		{% if formulario_nueva_receta.errors %}
+			<p style="color:red;">Por favor revisa este campo</p>
+		{% endif %}
+
+		<div class="card">
+			<div class="card-header">
+				<h3>Crear receta</h3>
+			</div>
+			
+			<form method="POST">{% csrf_token %}
+				<div class="card-body">
+					{{formulario_nueva_receta.as_p}}
+				</div>
+
+				<div class="card-footer">
+					<input class="btn btn-primary" type="submit" value="Crear">
+				</div>
+			</form>
+		</div>
+
+	</div>
+
+</div>
 
 	<script type="text/javascript">
                 // esto corrije el tipo del campo imput 'id_vencimiento' en el formulario para crear recetas
